--- a/contents/index.html
+++ b/contents/index.html
@@ -23,6 +23,7 @@
       <li><a href="./google_analytics/index.html">Google Analyticsを学ぶ</a></li>
       <li><a href="./git/index.html">Gitを学ぶ</a></li>
       <li><a href="./google_adsense/index.html">Googleアドセンスを学ぶ</a></li>
+      <li><a href="./pages/index.html">pages</a></li>
       <li><a href="./reference/index.html">外部参照サイトまとめ</a></li>
     </ol>
 
