--- a/contents/pages/page-lego.html
+++ b/contents/pages/page-lego.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../../js/common.js"></script>
     <style media="screen">
       div {
-        width: 980px;
+        width: 900px;
         margin: 0px auto;
         background-color: white;
       }
@@ -25,6 +25,7 @@
       h2 {
         border-left: solid 20px #FF9900;
         padding-left: 5px;
+        margin-top: 50px;
       }
       b {
         font-size: 1.1rem;
@@ -44,11 +45,12 @@
 
     <div id="ID_CONTENTS">
       <h2>知育玩具とは?</h2>
-      <p>子供の<b>「知」の能力の成長をサポートするおもちゃ</b>のことで、積み木やパズルなどが該当します。
-        皆さんがご存じのように、知育玩具などがなくても子供は普段の生活で多くの刺激を受け、不自由なく成長していくのものです。
-        ただ、育ってきた環境が人を成形するのも事実であり、
-        特に幼児期の1～6歳や、小学校に通い始めた6～12歳のときに受けた刺激は
-        <b>将来を成形する基盤</b>となるため特に大切だと言われています。</p>
+      <p>知育玩具は子供の<b>「知」の能力の成長をサポートするおもちゃ</b>のことです。積み木やパズルなどが該当します。
+        ただ、皆さんがご存じのように知育玩具などがなくても子供は不自由なく成長していくのものです。
+        でも、成長の度合いは育ってきた環境の影響を受けるため、よりよい刺激を与えるに越したことはありません。
+        特に幼児期の1～6歳や、小学校に通い始めた6～12歳の時期は、
+        <b>将来を成形する基盤</b>を構築するタイミングとなるため、環境づくりがより大切だと言われています。<br>
+        知育玩具は子供が育つ環境の一部だと考えてください。</p>
       <div class="center">
         <img width="200px" src="../../icon/先生01.jpg" alt="">
       </div>
@@ -59,10 +61,12 @@
         広義の意味の知育玩具なのかもしれません。</p>
       <p>では、<b>あなたのご家庭では知育玩具に何を求めますか？</b></p>
       <p>恐らく、地域によって、世代によって、育ってきた環境によって、知育玩具に求めているものが異なると思います。
-        これは<b>子供にどうなってほしいか</b>を考えることがひとつのヒントになるかもしれません。
-        <br>子供の成長を成り行きに任せる方もいるかと思いますが、環境を整えてあげること、少なくとも、
-        そのための出来る限りの工夫をしてあげてください。</p>
-      <p>さて、知育玩具に何を求めますか？子供視点で、<b>とにかく子供が楽しめる</b>ものという意見や、
+        なので、将来に目を向けて、<b>子供にどうなってほしいか</b>という観点を加えて考えることによって、
+        各ご家庭での回答が出てくるかと思われます。
+        <br>子供の成長は成り行きに任せる!という考えの方もいると思いますが、
+        子供のために、環境を整えてあげること、少なくとも、
+        そのための出来る限りの工夫をぜひしてみてください。</p>
+      <p>さて、あらためて知育玩具に何を求めますか？子供視点で、<b>とにかく子供が楽しめる</b>ものという意見や、
         大人視点で、<b>お金がかからない</b>もの、<b>大人も一緒に楽しめる</b>もの、
         親の手が離れるものなどの意見もあると思います。ご家庭の方針なので全部間違いではありません。</p>
       <p>ただ、今回おすすめしたいのは<b style="font-size:30px;">子供が自らデザインできること</b>です。</p>
@@ -79,7 +83,7 @@
         大人になるにつれて、出来ることが増えていく一方、困難なことに遭遇する機会も増えてきます。
         そんなときに、ゴールまでの道筋を自分で考えることができる人と、そうでない人がいます。
         子供が自らデザインできるとは、子供がゴールまでの道筋を自分で考えられるということ、
-        つまり、困難な局面に立っても、<b>自らゴールまでの道筋を造ることができる</b>ということです。
+        つまり、困難な局面に立っても、<b>自らゴールまでの道を造ることができる</b>ということです。
         </p>
         <div class="center">
           <img src="./images/ミニフィグ04.jpg" alt="道の設計">
@@ -98,14 +102,14 @@
         パズルと違うのは、型にはまっていないことです。<b>自分の発想を自由にカタチにできる</b>ことに
         おもしろさがあります。<br>
         ただ、<b>様々な障壁</b>があります。レゴで遊んだことがある人なら分かると思いますが、
-        欲しい形のパーツがない、欲しい色のパーツがない、欲しいサイズのパーツがないなどなど。
+        欲しい形のパーツがない、欲しい色のパーツがない、欲しいサイズのパーツがないなど。
         このような<b>自分の思いをカタチにできない</b>のもレゴのおもしろさの一つです。
         <br>レゴで遊び始めると手先が器用になりレゴのスキルがあがります。
         スキルがあがると造れる作品の幅が広がります。
         作品の幅が広がると新しい世界観が身に付きます。そして、いい作品がつくれるようになり、
-        だんだん家族や周りに自慢したくなってきます。<br>
-        <b>発想して、造って、評価してもらう。</b>そして、<b>いろんな制約を乗り越えながら、また新しくデザインする。</b>
-        <br>このサイクルを自然と繰り返すことができるのが、<b>知育玩具としてのレゴ</b>のおもしろさです。
+        だんだん家族や周りに自慢したくなります。<br>
+        <b>発想して、造って、評価する。</b>そして、<b>いろんな制約を乗り越えながら、また新しくデザインする。</b>
+        <br>このサイクルを自然と繰り返すことができるのが、レゴが<b>"知育玩具としてのレゴ"</b>である所以だと思います。
         </p>
       <div class="center">
         <img src="./images/花02.jpg" alt="材料">
@@ -116,19 +120,23 @@
       <p>レゴがデザイン思考を培うことができることは述べましたが、<b>なぜ他のおもちゃではなくレゴなのか？</b>という
       疑問があると思います。下記について解説していきます。</p>
       <ol>
-        <li>誰でも簡単に子供の年齢にあったレゴを選べる</li>
+        <li>誰でも簡単に子供にあったレゴを選べる</li>
         <li>費用対効果がよい</li>
         <li>資産価値がある</li>
       </ol>
 
-      <h2>子供の年齢にあったレゴの選び方</h2>
+      <h2>子供にあったレゴの選び方</h2>
       <p>レゴを選ぶ時の不安は、<b>子供が組み立てられるのか</b>という点。そして、<b>子供にハマるのか</b>という点。
-        <br>実は<b>レゴには適正年齢というものがある</b>のはご存じでしょうか。箱の表面に書いてある数字がそれに該当します。
+        <br>レゴには5分～10分で組み立てられるものもあれば、大人でも何時間かかかる超大作までいろいろあります。
+        子供は難しすぎるとできないし、簡単すぎるとすぐに飽きてしまします。
+        <br>でも実は<b>レゴには適正年齢というものがある</b>というのはご存じでしょうか。
+        箱の表面に書いてある数字がそれに該当します。
         1～2歳向け、3～5歳向け、6～8歳向け、9～11歳向け、12歳以上などと細かく分かれています。
-        5分～10分で組み立てられるものもあれば、大人でも何時間かかかる超大作までいろいろあります。
-        <br>また、<b>ディズニープリンセスシリーズ</b>だったり、<b>トイストーリーシリーズ、ハリーポッターシリーズ、
+        この表記を確認すれば誰でも簡単に年齢にあったレゴを見つけることができます。
+        <br>しかし、問題はそれが本当に子供にハマるかということ。
+        当然100人中100人がハマるとは言えません。でもそこはlego社も考えてくれています。<b>ディズニープリンセスシリーズ</b>だったり、<b>トイストーリーシリーズ、ハリーポッターシリーズ、
         マインクラフトシリーズ</b>、Lego社オリジナルの<b>忍者シリーズ、レゴフレンズシリーズ、</b>
-        理系の方が喜びそうな<b>レゴテクニックシリーズ</b>など、種類が豊富です。
+        理系の方が喜びそうな<b>レゴテクニックシリーズ</b>など、とにかく種類が豊富です。
         子供にハマるシリーズがひとつはあると思いますので、一度、子供と一緒におもちゃ屋さんに足を運んでみてください。
         </p>
         <div class="center">
@@ -138,7 +146,7 @@
       <h2>レゴの費用隊効果の考え方</h2>
       <p>レゴを購入するときの悩みのタネはその値段。<b>少し高いイメージがある</b>のも事実です。
         相場としては、だいたい2×4サイズのレゴブロックが1個で30円くらいです。<b>ブロック3つで約100円</b>と言われると少し高いですよね。
-        でも、大小さまざまなサイズのブロックがたくさん入ったお得なアイディアボックスシリーズは、
+        でも、アイディアボックスシリーズと言われる大小さまざまなサイズのブロックがたくさん入ったお得なセットは、
         例えば約500個入って5000円くらいです。<b>1個あたり10円</b>ならお安く感じますかね。</p>
         <p>ただ、費用対効果をみるうえで考えないといけないのが<b>効果</b>の部分です。</p>
         <p>さて、ここで質問です。もし子供の面倒を1時間見てくれると言われたらあなたはいくら支払いますか？
@@ -150,7 +158,8 @@
           <img src="./images/音楽01.jpg" alt="自分の時間">
           <img src="./images/音楽02.jpg" alt="自分の趣味">
         </div>
-        <p>また、レゴというのは<b>1歳から始まり、大人でも楽しむことができる</b>玩具です。さらに手先を使うので<b>ボケ防止にも効果がある</b>と言われています。
+        <p>また、レゴというのは<b>1歳から始まり、大人でも楽しむことができる</b>玩具です。さらに手先を使うので<b>ボケ防止にも効果がある</b>
+          と言われているので老後も使うことが可能です。
           使いまわし可能で、長期にわたり活躍すると考えればお安い投資になるのではないでしょうか。
         </p>
         <p><b>知育玩具として子供の能力の基盤をつくりあげる</b>という効果も含めて、費用対効果を考えてみてはいかがでしょうか。</p>
@@ -160,8 +169,8 @@
         一度見てみてください。昔遊んでたレゴにプレミアがついている可能性もあります。
         これはlego社がほとんどの商品を数量限定や期間限定、地域限定で販売しているためです。
         またレゴは世界中で人気があり、全世界にレゴ好きの大人がたくさんいます。
-        国内で販売されている商品が、海外では希少価値があり、時間が立つと価格が高騰しているということもありますし、
-        お店でもらったおまけのレゴが数千円で取引されていることもめずらしくありません。
+        国内で販売されている商品が、海外では希少価値があり、時間が立つと価格が高騰しているということもあります。
+        また、お店でもらったおまけのレゴが数千円で取引されていることもめずらしくありません。
         一度、フリマサイトを覗いてみてください。
       </p>
       <div class="center">
@@ -169,10 +178,10 @@
       </div>
 
       <h2>レゴの欠点</h2>
-      <p>さて、レゴの欠点はなんでしょう。1つは初期投資が高いということ。例えば、先ほど例に出した5,000円も
-        安くはないですよね。そして、もう1つは誤って踏むととても痛いということです。
-        子供が遊んでレゴを床にまき散らかして放置しておくということは、教育のよく行き届いたご家庭でしたらないでしょうが、
-        大抵の家庭ではこの問題に直面すると思われます。
+      <p>さて、レゴの欠点はなんでしょう。1つは<b>初期投資が高い</b>ということ。例えば、先ほど例に出した5,000円も
+        安くはないですよね。そして、もう1つは<b>誤って踏むととても痛い</b>ということです。
+        レゴをツボ押しに使っている強者もいますが、大抵のご家庭では親子喧嘩につながる大きな問題になります。
+        この2つの問題さえクリアできればいい投資になると思います。
       </p>
       <div class="center">
         <img src="./images/野菜01.jpg" alt="レゴの欠点">
