--- a/contents/pages/index.html
+++ b/contents/pages/index.html
@@ -35,8 +35,10 @@
       .center{
         text-align: center;
       }
-      table,tr, td{
+      table {
         border: solid 1px black;
+      }
+      table,tr, td{
         text-align: center;
         font-size: 24px;
         background-color: #FF9900;
@@ -50,25 +52,25 @@
     <div id="ID_CONTENTS">
       <table align="center">
         <tr>
-          <th>知育玩具としてのレゴ</th>
+          <th>知育玩具としてのレゴ<hr></th>
         </tr>
         <tr>
           <td><a href="./page-lego.html"><img src="./images/レゴブロック01.jpg" alt="レゴブロック"></a></td>
         </tr>
         <tr>
-          <td><a href="./page-lego.html">入口</a></td>
+          <td><a href="./page-lego.html"><hr>入口</a></td>
         </tr>
       </table>
       <br>
       <table align="center">
         <tr>
-          <th>レゴにミニフィグは必要か？</th>
+          <th>レゴにミニフィグは必要か？<hr></th>
         </tr>
         <tr>
           <td><a href="./page-minifig.html"><img src="./images/野菜02.jpg" alt="ミニフィグ"></a></td>
         </tr>
         <tr>
-          <td><a href="./page-minifig.html">入口</a></td>
+          <td><a href="./page-minifig.html"><hr>入口</a></td>
         </tr>
       </table>
     </div>
