--- a/contents/pages/page-lego.html
+++ b/contents/pages/page-lego.html
@@ -143,7 +143,7 @@
           <img src="./images/ミニフィグ03.jpg" alt="適正年齢">
         </div>
 
-      <h2>レゴの費用隊効果の考え方</h2>
+      <h2>レゴの費用対効果の考え方</h2>
       <p>レゴを購入するときの悩みのタネはその値段。<b>少し高いイメージがある</b>のも事実です。
         相場としては、だいたい2×4サイズのレゴブロックが1個で30円くらいです。<b>ブロック3つで約100円</b>と言われると少し高いですよね。
         でも、アイディアボックスシリーズと言われる大小さまざまなサイズのブロックがたくさん入ったお得なセットは、
