--- a/contents/pages/page-minifig.html
+++ b/contents/pages/page-minifig.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div id="ID_HEADER">
-      <h1 id="ID_TITLE">【レゴ研鑽】レゴにミニフィグは必要か？</h1>
+      <h1 id="ID_TITLE">レゴにミニフィグは必要か？</h1>
 
       <h2 id="ID_CONTENTS">目次</h2>
       <div id="ID_CONTENTS_LIST"></div>
