--- a/contents/pages/page-lego.html
+++ b/contents/pages/page-lego.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>【レゴ研鑽】知育玩具としてのレゴ</title>
     <meta property="og:title" content="【レゴ研鑽】知育玩具としてのレゴ">
-    <meta property="og:type" content="websites">
+    <meta property="og:type" content="article">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
-    <meta property="og:url" content="https://lego-san.github.io/">
-    <meta property="og:description" content="T.B.D">
+    <meta property="og:url" content="https://lego-san.github.io/contents/pages/page-lego.html">
+    <meta property="og:description" content="知育玩具としてのレゴについて紹介しています。">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../js/common.js"></script>
     <style media="screen">
@@ -195,9 +195,9 @@
       create_contents_list("ID_CONTENTS_LIST");
     </script>
 
-    <div id="ID_FOOTER">
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="../index.html">HOMEに戻る</a>]</p>
+    <div id="ID_FOOTER" class="center">
+      <br><hr>
+      <p class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="../../index.html">HOMEに戻る</a>]</p>
     </div>
 
   </body>
