--- a/contents/pages/page-minifig.html
+++ b/contents/pages/page-minifig.html
@@ -6,8 +6,8 @@
     <meta property="og:title" content="【レゴ研鑽】レゴにミニフィグは必要か？">
     <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
-    <meta property="og:url" content="https://lego-san.github.io/">
-    <meta property="og:description" content="T.B.D">
+    <meta property="og:url" content="https://lego-san.github.io/contents/pages/page-minifig.html">
+    <meta property="og:description" content="レゴにミニフィグは必要か">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../js/common.js"></script>
     <style media="screen">
@@ -160,9 +160,9 @@
       create_contents_list("ID_CONTENTS_LIST");
     </script>
 
-    <div id="ID_FOOTER">
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="../index.html">HOMEに戻る</a>]</p>
+    <div id="ID_FOOTER" class="center">
+      <br><hr>
+      <p class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="../../index.html">HOMEに戻る</a>]</p>
     </div>
 
   </body>
