--- a/index.html
+++ b/index.html
@@ -8,103 +8,89 @@
       gtag('js', new Date());
       gtag('config', 'UA-164123953-2');
     </script>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/tab.css">
-    <script type="text/javascript" src="./js/style.js"></script>
     <meta charset="utf-8">
-    <title>【レゴ研鑽】Legoで遊びながら学ぶ。レゴ作品集と初心者プログラム学習サイト</title>
-    <meta property="og:title" content="【レゴ研鑽】Legoで遊びながら学ぶ。レゴ作品集と初心者プログラム学習サイト">
+    <title>【レゴ研鑽】レゴで遊んで、学ぶ</title>
+    <meta property="og:title" content="【レゴ研鑽】レゴにミニフィグは必要か？">
     <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/">
-    <meta property="og:description" content="Lego作品とアニメーションを紹介してます。また、レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。プログラミングは初心者から中級者向けの情報です。">
+    <meta property="og:description" content="【レゴ研鑽】レゴで遊んで、学ぶのTOPページ">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
-    <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script type="text/javascript" src="./js/common.js"></script>
+    <style media="screen">
+      div {
+        width: 900px;
+        margin: 0px auto;
+        background-color: white;
+      }
+      h1 {
+        background: #FFFFEE;
+        border-left: solid 15px #FF9900;
+        border-right: solid 15px #FF9900;
+        border-bottom: solid 3px #CCCCCC;
+        padding-left: 10px;
+        text-align: center;
+      }
+      h2 {
+        border-left: solid 20px #FF9900;
+        padding-left: 5px;
+        margin-top: 50px;
+      }
+      b {
+        font-size: 1.1rem;
+      }
+      .center{
+        text-align: center;
+      }
+      table {
+        border: solid 1px black;
+      }
+      table,tr, td{
+        text-align: center;
+        font-size: 24px;
+        background-color: #FF9900;
+      }
+    </style>
   </head>
   <body>
-    <div id="ID_HEADER" class="top_area">
-      <h1 class="page_title" id="ID_TITLE">【レゴ研鑽】<br>レゴで遊ぼう、学ぼう</h1>
+    <div id="ID_HEADER">
+      <h1 id="ID_TITLE">【レゴ研鑽】<br>レゴで遊ぼう、学ぼう</h1>
     </div>
     <div id="ID_CONTENTS">
-      <table style="border: 0px;">
+      <table align="center">
         <tr>
-          <td style="width: 200px; border:0px; padding-right: 5px;">
-            <img class="circle" width=100% src="./icon/先生01.jpg" alt="レゴ先生">
-          </td>
-          <td style="border:0px;">
-            <p>子供と遊んだときに撮ったレゴの写真を<b style="font-size:30px;">Lego作品</b>を紹介してます。
-              また、本ホームページを作成しながら学んだ<b>ウェブプログラミング</b>のノウハウ
-              (HTML,JavaScript、Python、Githubなど)も紹介してます。
-              <br>楽しんで頂ければ幸いです。</p>
-          </td>
+          <th>知育玩具としてのレゴ<hr></th>
+        </tr>
+        <tr>
+          <td><a href="./contents/pages/page-lego.html"><img src="./contents/pages/images/レゴブロック01.jpg" alt="レゴブロック"></a></td>
+        </tr>
+        <tr>
+          <td><a href="./contents/pages/page-lego.html"><hr>入口</a></td>
         </tr>
       </table>
-      <hr>
-      <div id="ID_TABS" class="tabs" style="padding-bottom: 50px;">
-        <input id="ID_TAB01" type="radio" name="tab_item" checked>
-        <label id="ID_TAB_NAME" class="tab_item" for="ID_TAB01">レゴ研鑽1：遊ぼう</label>
-        <input id="ID_TAB02" type="radio" name="tab_item">
-        <label class="tab_item" for="ID_TAB02">レゴ研鑽2：学ぼう</label>
-
-        <div id="ID_TAB01_CONTENTS" class="tab_content">
-          <div class="tab_content_description">
-            <h2>レゴで遊ぼうコンテンツ</h2>
-            <table align="center" style="width:95%;">
-              <tbody>
-                <tr>
-                    <th style="width: 30%;">レゴ写真館</th>
-                    <th style="width: 30%;">レゴ作品集</th>
-                    <th style="width: 30%;">レゴアニメーション</th>
-                </tr>
-                <tr>
-                  <td style="background-color: black;"><a href="./contents/images/minifigs/minifigs.html"><img width=100% src="./icon/ミニフィグ01.jpg" alt="ミニフィグ"></a></td>
-                  <td style="background-color: black;"><a href="./contents/images/pictures/pictures.html"><img width=100% src="./icon/作品01.jpg" alt="レゴ作品"></a></td>
-                  <td style="background-color: black;"><a href="./contents/animations/index.html"><img width=100% src="./contents/animations/gif/フェイス01.gif" alt="フェイス"></a></td>
-                </tr>
-                <tr>
-                  <td style="text-align:center;"><a href="./contents/images/minifigs/minifigs.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/images/pictures/pictures.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/animations/index.html">入口</a></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <div class="tab_content" id="ID_TAB02_CONTENTS">
-          <div class="tab_content_description">
-            <h2>レゴで学ぼうコンテンツ</h2>
-            <table align="center" style="width:95%;">
-              <tbody>
-                <tr>
-                    <th style="width: 30%;">HTMLを学ぶ</th>
-                    <th style="width: 30%;">JavaScriptを学ぶ</th>
-                    <th style="width: 30%;">その他</th>
-                </tr>
-                <tr>
-                  <td><a href="./contents/html/index.html"><img width=100% src="./contents/images/jpg/オリジナル01.jpg" alt="html"></a></td>
-                  <td><a href="./contents/javascript/index.html"><img width=100% src="./contents/images/jpg/ドラゴンボート01.jpg" alt="javascript"></a></td>
-                  <td><a href="./contents/index.html"><img width=100% src="./contents/images/jpg/泥棒と警察01.jpg" alt="その他"></a></td>
-                </tr>
-                <tr>
-                  <td style="text-align:center;"><a href="./contents/html/index.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/javascript/index.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/index.html">入口</a></td>
-                </tr>
-              </tbody>
-            </table>
-
-          </div>
-        </div>
-      </div><!--ID_TABS-->
-    </div><!--ID_CONTENTS-->
-
-    <script type="text/javascript">
-      document.getElementById("ID_CONTENTS").style.marginTop = document.getElementById("ID_HEADER").clientHeight + "px";
-    </script>
-    <div>
-      <hr><br><br>
-      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="./privacy_policy/index.html">プライバシーポリシー</a>] / [<a href="https://docs.google.com/forms/d/e/1FAIpQLSez3uVXuSNpk3o6D9FngnFNTqTfs0DZeaFhKLTO_GNxZ-P9gg/viewform">お問い合わせ</a>]</p>
+      <br>
+      <table align="center">
+        <tr>
+          <th>レゴにミニフィグは必要か？<hr></th>
+        </tr>
+        <tr>
+          <td><a href="./contents/pages/page-minifig.html"><img src="./contents/pages/images/野菜02.jpg" alt="ミニフィグ"></a></td>
+        </tr>
+        <tr>
+          <td><a href="./contents/pages/page-minifig.html"><hr>入口</a></td>
+        </tr>
+      </table>
     </div>
+
+
+    <script>
+      create_contents_list("ID_CONTENTS_LIST");
+    </script>
+
+    <div id="ID_FOOTER" class="center">
+      <br><hr>
+      <p class="guide_area_bottom">[<a href="./privacy_policy/index.html">プライバシーポリシー</a>] / [<a href="https://docs.google.com/forms/d/e/1FAIpQLSez3uVXuSNpk3o6D9FngnFNTqTfs0DZeaFhKLTO_GNxZ-P9gg/viewform">お問い合わせ</a>]</p>
+    </div>
+
   </body>
 </html>
