--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:description" content="【レゴ研鑽】レゴで遊んで、学ぶのTOPページ">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="./js/common.js"></script>
+    <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style media="screen">
       div {
         width: 900px;
