--- a/contents/pages/page-minifig.html
+++ b/contents/pages/page-minifig.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>【レゴ研鑽】レゴにミニフィグは必要か？</title>
     <meta property="og:title" content="【レゴ研鑽】レゴにミニフィグは必要か？">
-    <meta property="og:type" content="websites">
+    <meta property="og:type" content="article">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/contents/pages/page-minifig.html">
     <meta property="og:description" content="レゴにミニフィグは必要か">
@@ -154,7 +154,7 @@
         <div class="center">
           <img src="../images/jpg/泥棒と警察01.jpg" alt="泥棒と警察">
         </div>
-
+      </div>
 
     <script>
       create_contents_list("ID_CONTENTS_LIST");
