--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -26,7 +26,7 @@
     このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。
     このトラフィックデータは匿名で収集されており、個人を特定するものではありません。
     この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。
-    この規約に関して、詳しくは<a href="https://support.google.com/accounts/answer/61416?hl=ja&ref_topic=3382296"こちら></a>をクリックしてください。</p>
+    この規約に関して、詳しくは<a href="https://support.google.com/accounts/answer/61416?hl=ja&ref_topic=3382296">こちら</a>をクリックしてください。</p>
 
     <h2>当サイトへのコメントについて</h2>
     <p>当サイトでは、スパム・荒らしへの対応として、コメントの際に使用されたIPアドレスを記録しています。
